@@ -2,8 +2,8 @@
 //
 // Showing off some of the templated conversion due to Rcpp
 //
-// Copyright (C) 2009 Dirk Eddelbuettel 
-// Copyright (C) 2010 Dirk Eddelbuettel and Romain Francois
+// Copyright (C) 2009        Dirk Eddelbuettel 
+// Copyright (C) 2010 - 2011 Dirk Eddelbuettel and Romain Francois
 
 #include <RInside.h>                    // for the embedded R via RInside
 
@@ -14,22 +14,22 @@ int main(int argc, char *argv[]) {
         RInside R(argc, argv);          // create an embedded R instance 
 
 	double d1 = 1.234;		// scalar double
-	R.assign(d1, "d1");
+	R["d1"] = d1;			// or R.assign(d1, "d1")
 
 	std::vector<double> d2;		// vector of doubles
 	d2.push_back(1.23);
 	d2.push_back(4.56);
-	R.assign(d2, "d2");
+	R["d2"] = d2;			// or R.assign(d2, "d2");
 
 	std::map< std::string, double > d3; // map of doubles
 	d3["a"] = 7.89;
 	d3["b"] = 7.07;
-	R.assign(d3, "d3");
+	R["d3"] = d3;			// or R.assign(d3, "d3");
 
 	std::list< double > d4; 	// list of doubles
 	d4.push_back(1.11);
 	d4.push_back(4.44);
-	R.assign(d4, "d4");
+	R["d4"] = d4;			// or R.assign(d4, "d4");
 
 	std::string txt = 		// now access in R
 	    "cat('\nd1=', d1, '\n'); print(class(d1));"
